# ryox

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  ISSUES.md  LICENSE  Makefile  NOTES.md  README.md  TODO.md  build.rs  install.sh  mkdocs.yml
.github/workflows/: ci.yml  release.yml
docs/: CLAUDE.md  action_plan.md  cheats.md  deep_guide.md  design_issues.md  documentation.md  getting_started.md  getting_starter.md  implementation_roadmap.md  index.md  installation.md  language_comparison.md  memory.md  memory_claude.md  memory_deepseek.md  missings.md  pkg_manager.md  proposals.md  quickstart.md  spec_summary.md  specification.md  std.md  troubleshooting.md
docs/analysis/: 2026-04-20-cross-doc-audit.md
docs/archive/: spec_summary_v0.1.md
docs/dev/: CLAUDE.md  README.md  built_in.md  compilation_pipeline.md  concurrency.md  considerations.md  copy_elision.md  dyn_trait.md  go_reference.md  implementation_roadmap.md  installation.md  official_pkg.md  parser.rs.md  project_structure.md  proposals.md  std.md  std_ext.md  stdlib_optimizations.md  tensor.md  testing.md  (+4 more)
examples/: calculator.ryo  channel_communication.ryo  closure_fib.ryo  example.ryo  hello.ryo  mandelbrot.ryo  mem.ryo  memory.ryo  panic.ryo  select_example.ryo  simple.ryo  square.ryo  task_join.ryo  task_spawn_run.ryo
experimental/: ryo.lalrpop
src/: CLAUDE.md  ast.rs  ast_lower.rs  astgen.rs  codegen.rs  diag.rs  errors.rs  evaluator.rs  hir.rs  indent.rs  lexer.rs  linker.rs  lower.rs  main.rs  parser.rs  pipeline.rs  sema.rs  simple.ryo  tir.rs  toolchain.rs  types.rs  uir.rs
tests/: integration_tests.rs
(+66 files in other folders)
