[package]
name = "ryo"
version = "0.1.0"
edition = "2024"

[build-dependencies]

[dependencies]

ariadne = "0.6"
chumsky = "0.11"
clap = { version = "4.6", features = ["derive"] }
cranelift = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-object = "0.130"
xz2 = "0.1"
logos = "0.16"
tar = "0.4"
target-lexicon = "0.13.5"
ureq = "3"
dirs = "6"

[dev-dependencies]
tempfile = "3.27"
